--- a/biome.json
+++ b/biome.json
@@ -30,10 +30,6 @@
     }
   },
   "files": {
-    "ignore": [
-      "**/node_modules/**",
-      "**/*.json",
-      ".next/**"
-    ]
+    "ignore": ["**/node_modules/**", "**/*.json", ".next/**", ".esbuild/**"]
   }
 }
