--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "bun-temp",
-  "module": "index.ts",
-  "type": "module",
+  "name": "ttddtdd",
+  "version": "1.0.0",
+  "description": "Serverless aws-nodejs-typescript template",
+  "main": "serverless.ts",
   "scripts": {
     "prepare": "husky",
     "setup": "$npm_execpath install && cp -n .env.local.example .env.local",
+    "dev": "sls offline",
+    "deploy": "sls deploy",
     "fmt": "biome format --write .",
     "lnt": "biome lint --write .",
     "che": "biome check --write .",
@@ -12,17 +15,31 @@
     "tst:w": "vitest watch --silent",
     "tst:ci": "vitest run --silent"
   },
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@types/bun": "latest",
-    "husky": "^9.1.4",
-    "vitest": "^2.0.5"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "engines": {
+    "node": ">=14.15.0"
   },
   "dependencies": {
-    "twitter-api-v2": "^1.17.2",
-    "zod": "^3.23.8"
-  }
+    "@middy/core": "^3.4.0",
+    "@middy/http-json-body-parser": "^3.4.0",
+    "twitter-api-v2": "^1.17.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@serverless/typescript": "^3.0.0",
+    "@types/aws-lambda": "^8.10.71",
+    "@types/node": "^14.14.25",
+    "esbuild": "^0.14.11",
+    "husky": "^9.1.4",
+    "json-schema-to-ts": "^1.5.0",
+    "serverless": "^3.0.0",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-esbuild": "^1.23.3",
+    "serverless-offline": "^14.0.0",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^4.1.3",
+    "vitest": "^2.0.5"
+  },
+  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
+  "license": "MIT"
 }
