--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.14.11",
     "husky": "^9.1.4",
     "json-schema-to-ts": "^1.5.0",
