--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "che": "biome check --write .",
     "tst": "echo 'vitest run してください'",
     "tst:w": "vitest watch --silent",
-    "tst:ci": "vitest run --silent"
+    "tst:ci": "vitest run --silent",
+    "dbinstall": "sls dynamodb install",
+    "dbmigrate": "sls dynamodb migrate --stage local",
+    "dbstart": "sls dynamodb start --stage local",
+    "dbadmin": "npx dynamodb-admin -o"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -34,6 +38,7 @@
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
     "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-dynamodb": "^0.2.54",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^14.0.0",
     "ts-node": "^10.4.0",
