--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@aws-sdk/lib-dynamodb": "^3.624.0",
     "@middy/core": "^3.4.0",
     "@middy/http-json-body-parser": "^3.4.0",
+    "nodemailer": "^6.9.14",
     "twitter-api-v2": "^1.17.2"
   },
   "devDependencies": {
@@ -34,8 +35,9 @@
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/node": "^14.14.25",
+    "@types/nodemailer": "^6.4.15",
     "dotenv": "^16.4.5",
-    "esbuild": "^0.14.11",
+    "esbuild": "^0.23.0",
     "husky": "^9.1.4",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^3.0.0",
@@ -43,6 +45,8 @@
     "serverless-dynamodb": "^0.2.54",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^14.0.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
   },
