--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,8 @@
     ".webpack/**/*",
     "_warmup/**/*",
     ".vscode/**/*"
-  ]
+  ],
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
