--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,8 +1,5 @@
 [install.lockfile]
 
-# whether to save the lockfile to disk
+# yarn.lockで依存関係を可視化する
 save = true
-
-# whether to save a non-Bun lockfile alongside bun.lockb
-# only "yarn" is supported
 print = "yarn"
