--- a/.env.local.example
+++ b/.env.local.example
@@ -1,7 +1,11 @@
+# 適当なサイトを見てTwitter APIに登録して必要な情報を取得してください
 TW_APP_KEY=
 TW_APP_SECRET=
 TW_ACCESS_TOKEN=
 TW_ACCESS_SECRET=
+# 30~128文字のAPIキー
 API_KEY=
 MY_GMAIL=
+# [アプリ パスワードでログインする - Gmail ヘルプ](https://support.google.com/mail/answer/185833?hl=ja)
 MY_GMAIL_PASSWORD=
+SERVICE_NAME="AWS Lambda"
