--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,9 +45,5 @@
     "editor.formatOnSave": false,
     "files.trimTrailingWhitespace": false
   },
-  "explorer.fileNesting.enabled": true,
-  "explorer.fileNesting.patterns": {
-    "*.module.css": "${capture}.module.css.d.ts, ${capture}.module.css.d.ts.map",
-    "*.module.scss": "${capture}.module.scss.d.ts, ${capture}.module.scss.d.ts.map"
-  }
+  "explorer.fileNesting.enabled": true
 }
