--- a/biome.json
+++ b/biome.json
@@ -30,6 +30,6 @@
     }
   },
   "files": {
-    "ignore": ["**/node_modules/**", "**/*.json", ".next/**", ".esbuild/**"]
+    "ignore": ["**/node_modules/**", "**/*.json", ".esbuild/**"]
   }
 }
