--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "db:i": "sls dynamodb install",
     "db:mig": "sls dynamodb migrate --stage local",
     "db:start": "sls dynamodb start --stage local",
-    "db:admin": "npx dynamodb-admin -o"
+    "db:admin": "dynamodb-admin -o"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -37,6 +37,7 @@
     "@types/node": "^14.14.25",
     "@types/nodemailer": "^6.4.15",
     "dotenv": "^16.4.5",
+    "dynamodb-admin": "^4.6.1",
     "esbuild": "^0.23.0",
     "husky": "^9.1.4",
     "json-schema-to-ts": "^1.5.0",
