セットアップが失敗していたので修正

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,4 +8,4 @@ API_KEY=
 MY_GMAIL=
 # [アプリ パスワードでログインする - Gmail ヘルプ](https://support.google.com/mail/answer/185833?hl=ja)
 MY_GMAIL_PASSWORD=
-SERVICE_NAME="AWS Lambda"
+SERVICE_NAME="AWS-Lambda"
