--- a/.env.local.example
+++ b/.env.local.example
@@ -5,7 +5,7 @@ TW_ACCESS_TOKEN=
 TW_ACCESS_SECRET=
 # 30~128文字のAPIキー
 API_KEY=
-MY_GMAIL=
+MY_GMAIL=example@example.com
 # [アプリ パスワードでログインする - Gmail ヘルプ](https://support.google.com/mail/answer/185833?hl=ja)
 MY_GMAIL_PASSWORD=
 SERVICE_NAME="AWS-Lambda"
